[project]
name = "fastretriever"
version = "0.0.0"
description = "Fast implementation of langchain sparse retriever"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community==0.3.1",
    "rank-bm25>=0.2.2",
    "scipy>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "datasets>=3.0.2",
    "ipykernel>=6.29.5",
    "mecab-python3>=1.0.9",
    "pytest>=8.3.3",
    "scikit-learn>=1.5.2",
    "unidic-lite>=1.0.8",
]
